<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="lt.moneymanager.FinanceActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:hint="@string/hint_name"
            android:id="@+id/txtName"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_weight="1"/>
        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radExpense"
                android:text="@string/expense"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radIncome"
                android:text="@string/income"/>
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:text="@string/pType"
            android:layout_weight="1"/>
        <Spinner
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/spinType"
            android:layout_weight="1">
        </Spinner>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789."
            android:id="@+id/numAmount"
            android:layout_weight="1"/>
    </TableRow>
</TableLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/save"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="saveDetails"/>

    </LinearLayout>

</FrameLayout>
